# OpenShop

./: .env.example  .gitignore  CNAME  README.md
.github/workflows/: docs.yml
bff/admin-bff/: .env.example  Dockerfile  README.md  requirements.txt
bff/api-gateway/: .env.example  .gitignore  API.md  Dockerfile  README.md  api-gateway.http  requirements.txt
bff/app-bff/: .env.example  Dockerfile  README.md
docs/: README.md  _navbar.md  _sidebar.md  admin-rbac.md  api-contract.md  architecture.md  astro.config.mjs  domain-model.md  event-flow.md  index.html  package-lock.json  package.json
docs/00-overview/: business-flow.md  glossary.md  introduction.md
docs/01-getting-started/: docker-run.md  local-dev.md  quick-start.md
docs/02-user-guide/: merchant-onboarding.md  notification.md  order-process.md
docs/03-api-reference/: auth.md  merchants.md  orders.md  sms.md  users.md
docs/04-architecture/: event-driven.md  gateway.md  microservices.md  saga.md  (+2 more)
infra/: docker-compose.yml
scripts/: README.md  health-check.sh  start-all.sh
services/git-aggregator-service/: .env.example  alembic.ini  pyproject.toml  requirements.txt
services/git-aggregator-service/alembic/: env.py
services/git-aggregator-service/alembic/versions/: 0001_init_git_aggregator.py
services/git-aggregator-service/app/: main.py
services/git-aggregator-service/app/api/: commits.py  router.py  stats.py  webhook.py
services/git-aggregator-service/app/core/: config.py  logging.py  response.py  security.py
services/git-aggregator-service/app/models/: __init__.py  commit.py  repository.py
services/git-aggregator-service/app/providers/: codeup.py  github.py  gitlab.py
services/git-aggregator-service/app/schemas/: commit.py  webhook.py
services/git-aggregator-service/app/services/: commit_service.py
services/git-aggregator-service/tests/: test_providers_and_security.py  test_webhook_api.py
services/lead-service/: .env.example  README.md  pyproject.toml  requirements.txt
services/lead-service/alembic/: env.py
services/lead-service/alembic/versions/: 0001_init_lead_tables.py
services/lead-service/app/: main.py
services/lead-service/app/api/v1/: leads.py
services/lead-service/app/core/: config.py  events.py  redis.py  response.py
services/lead-service/app/models/: __init__.py  lead.py
services/lead-service/app/schemas/: lead.py
services/lead-service/app/services/: lead_service.py
services/lead-service/tests/: test_leads.py
services/sms-service/: .env.example  .env.prod.example  .env.staging.example  .gitignore  API.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  sms-service.http
services/sms-service/alembic/: env.py
services/sms-service/alembic/versions/: 0001_init.py  0002_add_request_id_error_code.py  0003_add_sms_config_store.py  0004_policy_and_channel_tables.py
services/sms-service/app/: main.py
services/sms-service/app/api/v1/: admin.py  router.py
services/sms-service/app/core/: config.py  database.py  logging.py  masking.py  metrics.py  rate_limiter.py  redis.py  response.py  tracing.py
services/sms-service/app/models/: __init__.py  sms_channel.py  sms_client_key.py  sms_config_store.py  sms_policy.py  sms_record.py  sms_template.py
services/sms-service/app/providers/: __init__.py  aliyun.py  aliyun_phone_svc.py  chuanglan.py  factory.py  tencent.py
services/sms-service/app/schemas/: __init__.py  sms.py
services/sms-service/app/services/: __init__.py  admin_service.py  sms_service.py
services/sms-service/deploy/: deployment.yaml  service.yaml
services/sms-service/scripts/: seed_templates.py
services/sms-service/tests/: __init__.py  test_admin.py  test_health.py  test_sms_core.py
services/user-service/: .env.example  API.md  Dockerfile  README.md  pyproject.toml  requirements.txt  user-service.http
services/user-service/alembic/: env.py
services/user-service/alembic/versions/: 0001_init_rbac.py
services/user-service/app/: main.py
services/user-service/app/api/v1/: auth.py  consumers.py  permissions.py  roles.py  router.py  users.py
services/user-service/app/core/: config.py  response.py
services/user-service/app/models/: __init__.py  consumer.py  permission.py  role.py  user.py
services/user-service/app/schemas/: __init__.py  auth.py  permission.py  role.py  user.py
services/user-service/app/services/: address_service.py  auth_service.py  consumer_service.py  permission_service.py  role_service.py  user_service.py
services/user-service/scripts/: init_superadmin.py
services/user-service/tests/: test_auth.py  test_consumers.py
(+400 files in other folders)
